--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,15 @@ body {
   text-decoration: none;
   color: inherit;
   border-left: 2px solid var(--main-font-color);
+  background: linear-gradient(to left, white 50%, var(--main-font-color) 50%)
+    right;
+  background-size: 200%;
+  transition: 0.3s ease-in-out;
+}
+
+.highlight-email:hover {
+  background-position: left;
+  color: white;
 }
 
 .grid-container {
@@ -263,14 +272,31 @@ footer {
   gap: 3.2rem;
   padding-right: 14rem;
   text-transform: uppercase;
-  color: var(--main-font-color);
+  /* color: var(--main-font-color); */
   font-weight: var(--font-weight-500);
 }
 
-.link:link,
-.link:visited,
-.link:hover,
-.link:active {
-  text-decoration: none;
+.link {
   color: var(--main-font-color);
+  position: relative;
+  text-decoration: none;
+}
+
+.link::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background-color: var(--main-font-color);
+  bottom: -5px;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.link:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
 }
